# HiveMindAI

./: .env.example  .env.local.example  .gitignore  PitchGuide.md  Readme.md  WorkflowAmendmentArchitecture.md  main.py  pyproject.toml  requirements.txt  run-local-free.bat  run-local-free.ps1  run.bat  run.ps1
.github/workflows/: ci.yml
agents/: __init__.py  comms_agent.py  debate_agent.py  executor_agent.py  knowledge_agent.py  meeting_agent.py  planner_agent.py  pm_agent.py  reflection_agent.py  summary_agent.py  validator_agent.py
api/: __init__.py  approval_webhook.py  demo.py  ingest.py  routes.py  security.py
api/static/: app.js  index.html
config/: demo_defaults.json
functions/: host.json
functions/nightly_summary/: __init__.py
hitl/: __init__.py  approval_handler.py  confidence_gate.py  teams_bot.py
infra/: Dockerfile.agent  docker-compose.yml
integrations/: __init__.py  azure_devops_client.py  jira_client.py  slack_client.py
memory/: __init__.py  cosmos_client.py  knowledge_store.py  search_client.py
metrics/: swarm_metrics.py
orchestrator/: __init__.py  group_chat.py  swarm_runtime.py
schemas/: __init__.py  knowledge_entry.py  task_dag.py
shared/: __init__.py  artifacts.py  config.py  errors.py  integration_checks.py  llm_client.py  message_schema.py  redis_client.py  security.py  service_bus.py  validation.py
tests/: test_api_security.py  test_config.py  test_end_to_end_features.py  test_message_schema.py  test_storage_and_resilience.py  test_swarm_runtime.py  test_task_dag.py
