[project]
name = "hivemindai"
version = "0.1.0"
description = "Agent swarm for meeting-to-execution workflows"
requires-python = ">=3.10,<3.13"
dependencies = [
    "pyautogen==0.2.35",
    "azure-servicebus==7.12.2",
    "redis==5.0.1",
    "pydantic==2.5.3",
    "openai==1.30.0",
    "python-dotenv==1.0.1",
    "fastapi==0.111.0",
    "uvicorn==0.30.1",
    "azure-cosmos==4.7.0",
    "azure-search-documents==11.6.0",
    "azure-storage-blob==12.20.0",
    "azure-communication-email==1.0.0",
    "httpx==0.27.0",
    "python-multipart==0.0.9",
    "pymongo==4.7.1",
    "httpcore==1.0.5",
    "distro==1.9.0",
    "azure-functions==1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.2.2",
    "pytest-asyncio==0.23.7",
    "ruff==0.8.6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 140
extend-exclude = ["symphony", "workspace", "local_state"]

[tool.ruff.lint]
select = ["F"]
ignore = ["E501"]
